# aw-watcher-ask

./: .gitignore  README.md  default.nix  flake.nix  pyproject.toml
scripts/: export_visualization.py
src/aw_watcher_ask/: cli.py  config.py  core.py  models.py  zenity_wrapper.py
tests/: test_cli.py  test_config.py  test_core.py
visualization/: index.html
